added in cozey cradle link

--- a/index.html
+++ b/index.html
@@ -74,11 +74,8 @@
 				<h2 class="major">Projects</h2>
 				<h2>Cozey Cradles</h2>
 				<span class="image main"><img src="images/Home.png" alt="" /></span>
-				<p>Cozy Cradle is a baby car seat rental service that allows users to rent car seats for their infants. This web
-					application is built using the MERN stack (MongoDB, Express, React, Node.js). Users can browse and filter
-					through a variety of car seats, select the desired rental date and city, add items to the cart, and complete
-					the checkout process using Stripe for payment. Each order is assigned a unique 5-digit confirmation code for
-					easy reference.</p>
+				<p>Cozy Cradle is a baby car seat rental service that allows users to rent car seats for their infants. This web application is built using the MERN stack (MongoDB, Express, React, Node.js). Users can browse and filter through a variety of car seats, select the desired rental date and city, add items to the cart, and complete the checkout process using Stripe for payment. Each order is assigned a unique 5-digit confirmation code for easy reference. 
+					Click <a href="https://balmy-afternoon-production.up.railway.app/">here</a> to see the Cozy Cradle web application for yourself!</p>
 
 				<h2>Sush-2-Go</h2>
 				<span class="image main"><img src="images/menu.png" alt="" /></span>
@@ -160,7 +157,8 @@
 					</li>
 				</ul>
 				<h3>Resume</h3>
-				<p>Download my resume: <a href="/docs/Urur.pdf" download>Yusuf Urur Resume.pdf</a></p>
+				<p>Download my resume: <a href="/docs/Urur.pdf" download="Yusuf Urur Resume.pdf">Yusuf Urur Resume.pdf</a></p>
+
 			</article>
 
 
