--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<p>Cozy Cradle is a baby car seat rental service that allows users to rent car seats for their infants. This web application is built using the MERN stack (MongoDB, Express, React, Node.js). Users can browse and filter through a variety of car seats, select the desired rental date and city, add items to the cart, and complete the checkout process using Stripe for payment. Each order is assigned a unique 5-digit confirmation code for easy reference. 
 					Click <strong><a href="https://balmy-afternoon-production.up.railway.app/">here</a></strong> to see the Cozy Cradle web application for yourself!</p>
 
-				<h2>Sush-2-Go</h2>
+				<h2>Sushi-2-Go</h2>
 				<span class="image main"><img src="images/menu.png" alt="" /></span>
 				<p>Sushi 2 Go is an innovative restaurant ordering application that offers a seamless and convenient experience
 					for both users and restaurants. As a user, you can easily browse through an enticing menu and select your
