added in buttons for the links

--- a/index.html
+++ b/index.html
@@ -70,52 +70,36 @@
 			</article>
 
 			<!-- Work -->
-			<article id="work">
-				<h2 class="major">Projects</h2>
-				<h2>Cozey Cradles</h2>
-				<span class="image main"><img src="images/Home.png" alt="" /></span>
-				<p>Cozy Cradle is a baby car seat rental service that allows users to rent car seats for their infants. This web application is built using the MERN stack (MongoDB, Express, React, Node.js). Users can browse and filter through a variety of car seats, select the desired rental date and city, add items to the cart, and complete the checkout process using Stripe for payment. Each order is assigned a unique 5-digit confirmation code for easy reference. 
-					Click <strong><a href="https://balmy-afternoon-production.up.railway.app/">here</a></strong> to see the Cozy Cradle web application for yourself!</p>
-
-				<h2>Sushi-2-Go</h2>
-				<span class="image main"><img src="images/menu.png" alt="" /></span>
-				<p>Sushi 2 Go is an innovative restaurant ordering application that offers a seamless and convenient experience
-					for both users and restaurants. As a user, you can easily browse through an enticing menu and select your
-					favorite items to add to your order cart. Once you're ready, simply submit your order, and you'll receive an
-					SMS with all the necessary order details, ensuring a smooth communication channel. You'll also stay updated on
-					the progress of your order, receiving notifications for order confirmation and when your delicious food is
-					ready for pickup.</p>
-				<p>On the restaurant side, Sushi 2 Go provides an efficient system to receive and confirm incoming orders,
-					streamlining the order management process. With the integration of technologies like EJS, NodeJs, Express,
-					PostgreSQL, jQuery, Twilio, and SCSS, Sushi 2 Go delivers a delightful and reliable ordering experience for
-					sushi lovers and restaurant owners alike.</p>
-
-				<h2>TinyApp</h2>
-				<span class="image main"><img src="images/tinyapp.png" alt="" /></span>
-				<p>TinyApp is a full stack web application built with Node and Express that allows users to shorten long URLs
-					(much like bit.ly). Users can register and login to create, edit, and delete their own shortened URLs. The
-					application also tracks the number of visits to each shortened URL, as well as the number of unique visitors
-					who have visited the URL.</p>
-
-				<h2>PhotoLabs</h2>
-				<span class="image main"><img src="images/photolabs.png" alt="" /></span>
-				<p>
-					The PhotoLabs project entailed constructing a React-based single-page application that empowers users to
-					explore and interact with a vast collection of photos. By leveraging a pre-existing API, I implemented
-					seamless photo navigation, enabling users to effortlessly browse various categories, view enlarged photos, and
-					interact with their favorites. Through the integration of notifications and a dynamic navigation menu, the
-					overall user experience was enhanced, fostering engagement and satisfaction.
-				</p>
-				<p>
-					To achieve the project's objectives, I utilized Create React App (CRA) to scaffold the client-side application
-					and employed Webpack and Babel for efficient bundling and transpiling of the codebase. On the server side, I
-					leveraged Express.js to establish a robust API server, facilitating seamless data retrieval and persistence
-					through a PostgreSQL database. Through orchestrating these technologies, I successfully delivered a functional
-					and performant application, exemplifying my expertise in React development, API integration, and the
-					implementation of user-centric design principles.
-				</p>
-
-			</article>
+<article id="work">
+	<h2 class="major">Projects</h2>
+	
+	<h2>Cozey Cradles</h2>
+	<span class="image main"><img src="images/Home.png" alt="" /></span>
+	<p>Cozy Cradle is a baby car seat rental service that allows users to rent car seats for their infants. This web application is built using the MERN stack (MongoDB, Express, React, Node.js). Users can browse and filter through a variety of car seats, select the desired rental date and city, add items to the cart, and complete the checkout process using Stripe for payment. Each order is assigned a unique 5-digit confirmation code for easy reference.</p>
+	
+	<button><a href="https://balmy-afternoon-production.up.railway.app/" target="_blank">View Live Site</a></button>
+	<button><a href="https://github.com/yusufurur/cozey-cradle" target="_blank">View Source Code</a></button>
+	
+	<h2 style="margin-top: 20px;">Sushi-2-Go</h2>
+	<span class="image main"><img src="images/menu.png" alt="" /></span>
+	<p>Sushi 2 Go is an innovative restaurant ordering application that offers a seamless and convenient experience for both users and restaurants. As a user, you can easily browse through an enticing menu and select your favorite items to add to your order cart. Once you're ready, simply submit your order, and you'll receive an SMS with all the necessary order details, ensuring a smooth communication channel. You'll also stay updated on the progress of your order, receiving notifications for order confirmation and when your delicious food is ready for pickup.</p>
+	<p>On the restaurant side, Sushi 2 Go provides an efficient system to receive and confirm incoming orders, streamlining the order management process. With the integration of technologies like EJS, Node.js, Express, PostgreSQL, jQuery, Twilio, and SCSS, Sushi 2 Go delivers a delightful and reliable ordering experience for sushi lovers and restaurant owners alike.</p>
+	
+	<button style="margin-top: 20px;"><a href="https://github.com/yusufurur/grab-your-sushi-now" target="_blank">View Source Code</a></button>
+	
+	<h2 style="margin-top: 20px;">TinyApp</h2>
+	<span class="image main"><img src="images/tinyapp.png" alt="" /></span>
+	<p>TinyApp is a full stack web application built with Node and Express that allows users to shorten long URLs (much like bit.ly). Users can register and login to create, edit, and delete their own shortened URLs. The application also tracks the number of visits to each shortened URL, as well as the number of unique visitors who have visited the URL.</p>
+	
+	<button style="margin-top: 20px;"><a href="https://github.com/yusufurur/tinyapp" target="_blank">View Source Code</a></button>
+	
+	<h2 style="margin-top: 20px;">PhotoLabs</h2>
+	<span class="image main"><img src="images/photolabs.png" alt="" /></span>
+	<p>The PhotoLabs project entailed constructing a React-based single-page application that empowers users to explore and interact with a vast collection of photos. By leveraging a pre-existing API, I implemented seamless photo navigation, enabling users to effortlessly browse various categories, view enlarged photos, and interact with their favorites. Through the integration of notifications and a dynamic navigation menu, the overall user experience was enhanced, fostering engagement and satisfaction.</p>
+	<p>To achieve the project's objectives, I utilized Create React App (CRA) to scaffold the client-side application and employed Webpack and Babel for efficient bundling and transpiling of the codebase. On the server side, I leveraged Express.js to establish a robust API server, facilitating seamless data retrieval and persistence through a PostgreSQL database. Through orchestrating these technologies, I successfully delivered a functional and performant application, exemplifying my expertise in React development, API integration, and the implementation of user-centric design principles.</p>
+	
+	<button style="margin-top: 20px;"><a href="https://github.com/yusufurur/photolabs" target="_blank">View Source Code</a></button>
+</article>
 
 			<!-- About -->
 			<article id="about">
