--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<p>Cozy Cradle is a baby car seat rental service that allows users to rent car seats for their infants. This web application is built using the MERN stack (MongoDB, Express, React, Node.js). Users can browse and filter through a variety of car seats, select the desired rental date and city, add items to the cart, and complete the checkout process using Stripe for payment. Each order is assigned a unique 5-digit confirmation code for easy reference.</p>
 	<h4>Stacks and Technologies Used:</h4>
 <ul>
-  <li>MERN (MongoDB, Express, React, Node.js</li>
+  <li>MERN (MongoDB, Express, React, Node.js)</li>
 	<li>Stripe</li>
 	<li>Material UI</li>
 	<li>CSS</li>
