updated my intro

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 					and libraries. With a major in Computer Science from Ryerson University, I possess a strong academic
 					foundation. By the way, check out my <a href="#work">awesome work</a>.
 				</p>
+				<p>
+					In my most recent role as a Full Stack Web Developer at Drastic Technologies Inc., I had the opportunity to further refine my skills and tackle challenging projects. During my time there, I spearheaded the redesign and implementation of web UIs using HTML, JavaScript, React, and Bootstrap. Collaborating closely with my team, I seamlessly integrated REST APIs to enhance functionality and conducted rigorous UI testing to ensure optimal user experiences across various browsers.
+				</p>
 				<p>My proficiency in web development is underscored by the completion of the immersive Lighthouse Labs Online
 					Web Development Program, which awarded me a diploma. Complementing my practical experience, I hold
 					industry-recognized certifications in ISTQB (International Software Testing Qualifications Board) and MTA
@@ -431,7 +434,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</form>
 				</section>
 
-			</article>
+			</article> 
 
 		</div>
 
