removed the SQL it was mentioned twice

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 					Charts</p>
 
 				<h2>Stacks</h2>
-				<p>NodeJS, React, Ajax, Express, EJS, jQuery, Rails, PostgreSQL, SQL, JavaScript, Ruby on Rails, HTML, CSS, SQL, Git, MongoDB, Typescript, Bootstrap
+				<p>NodeJS, React, Ajax, Express, EJS, jQuery, Rails, PostgreSQL, SQL, JavaScript, Ruby on Rails, HTML, CSS, Git, MongoDB, Typescript, Bootstrap
 				</p>
 
 
